<resources>
    <string name="activityMainLogIn">Log In</string>
    <string name="activitySignUpTitle">Sign Up</string>
    <string name="usrPlaceholder">Usuario</string>
    <string name="passPlaceholder">Password</string>
    <string name="passPlaceholderCfrm">Confirmar Password</string>
    <string name="lostPassIni">O</string>
    <string name="lostPass">¿Olvidaste la contraseña?</string>
    <string name="btnLogIn">Iniciar sesión</string>
    <string name="btnSignUp">Registrarse</string>
    <string name="btnGoogle">Signin with Google</string>
    <string name="contentDes">Descripción</string>
    <string name="emailPlaceholder">Correo electrónico</string>
    <string name="msgFailLogin">Usuario o contraseña de inicio de sesión incorrectos.</string>

    <string name="resetPassTitle">Restablecer contraseña</string>
    <string name="btnSendEmail">Enviar</string>
    <string name="emailRequired">Ingrese su dirección de correo electrónico</string>

    <string name="btnAdd">Agregar Tarea</string>
    <string name="btnEdit">Editar Tarea</string>
    <string name="btnDelete">Eliminar Tarea</string>
    <string name="btnShow">Ver Tareas</string>
    <string name="btnConfig">Configuraciones</string>

    <string name="titulo"><b>Titulo</b></string>
    <string name="tituloDescripcion">Ingrese el título de la tarea</string>
    <string name="fecha"><b>Fecha</b></string>
    <string name="fechaInicioDescripcion">Ingrese la fecha de inicio</string>
    <string name="hora"><b>Hora</b></string>
    <string name="horaInicioDescripcion">Ingrese la hora de inicio </string>
    <string name="descripcion"><b>Descripcion</b></string>
    <string name="descripcionDescripcion">Descripcion de la tarea</string>
    <string name="tareaPrevia"><b>Tarea Previa</b></string>
    <string name="tareapreviaDescripcion">Si es necesario completar otra tarea antes </string>
    <string name="frecuencia"><b>Frecuencia</b></string>
    <string name="frecuenciaDescripcion">Cada cuantos dias se repetira</string>
    <string name="prioridad"><b>Prioridad</b></string>
    <string name="prioridadDescripcion">Prioridad [1(Poco urgente) - 10(Muy urgente)] </string>
    <string name="estado"><b>Estado</b></string>
    <string name="estadoDescripcion">Estado de la tarea [Pendiente/Finalizada] </string>
    <string name="estadoP">Pendiente</string>
    <string name="estadoF">Finalizada</string>
    <string name="btnSave">Guardar</string>
    <string name="btnCancel">Cancelar</string>

    <string name="delete_dialog_title">¿Borrar tarea?</string>
    <string name="delete_dialog_description">¿Está seguro que desea eliminar la tarea %1$s?<br />
    Presione Aceptar para borrar</string>
    <string name="accept">Aceptar</string>

    <string name="incomplete_data_title">Faltan datos</string>
    <string name="incomplete_data_description">Todos los campos deben ser llenados para crear una tarea.</string>

    <string name="bienvenido">Bienvenido</string>
    <string name="totalTateas"><b>Tareas totales:</b> %1$s</string>
    <string name="finishedTareas"><b>Tareas finalizadas:</b> %1$s</string>

    <string name="changePassword">Cambiar Contraseña</string>
    <string name="longPass">Almenos 8 caracteres</string>
    <string name="oldPass">Contraseña actual</string>
    <string name="newPass">Nueva contraseña</string>
    <string name="save">Guardar cambios</string>
    <string name="errorPass">Debe completar la contraseña</string>
    <string name="errorEmail">Correo electronico no valido</string>
    <string name="sendEmail">Solicitar cambio de contraseña</string>

    <string name="userHelp">Ingrese su nombre de usuario</string>
    <string name="passHelp">Ingrese su contraseña</string>
    <string name="nameIncorrect">usuario incorrecto</string>
    <string name="passIncorrect">contraseña incorrecta</string>


    <string name="correo">Correo electronico</string>
    <string name="correoHelp">Ingrese su correo electronico</string>
    <string name="registro">Registrado correctamente</string>
    <string name="correoIncorrect">No es un correo valido</string>
    <string name="passShort">La contraseña debe tener almenos 8 caracteres</string>
    <string name="passCompare">Las contraseña no coincide</string>

    <string name="reset">La liga para restablecer la contraseña ha sido enviada</string>

    <string name="titlePerfil">Perfil</string>
    <string name="titleSettings">Configuracion</string>
    <string name="titleNew">Nueva Tarea</string>
    <string name="titleEdit">Editar Tarea</string>
    <string name="titleDetalles">Detalles Tarea</string>
    <string name="cerrerSesion">Cerrar Sesión</string>

    <string name="camera">Abrir cámara</string>

    <string name="change">La liga para cambiar la contraseña ha sido enviada</string>

    <string name="error_notification">Si no puede ver la notificacion revise los permisos de la aplicacion</string>
    <string name="channel_recordatorios">recordatorios</string>
    <string name="recordatorios_description">Notificaciones para recordar las tareas</string>
    <string name="tryNotification">Probar Notificacion</string>
    <string name="notification_title">Recordatorio</string>
    <string name="notification_body">Tareas pendientes</string>
    <string name="home">Inicio</string>

    <string name="tryCrash">Probar Crash</string>
    <string name="default_web_client_id_2" translatable="false">820928699942-5qpnmr8lpmvoq004n4k0ftadl7ip8mfn.apps.googleusercontent.com</string>


</resources>