<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tituloInput_layout"
                style="@style/ChronoMasterTheme.OutlinedTextInputLayout"
                android:hint="@string/titulo"
                app:startIconDrawable="@drawable/ic_title"
                app:helperText="@string/tituloDescripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fechaInicio_layout"
                style="@style/ChronoMasterTheme.OutlinedTextInputLayout"
                android:hint="@string/fecha"
                app:startIconDrawable="@drawable/ic_calendar"
                app:helperText="@string/fechaInicioDescripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtFecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none|date"
                    android:clickable="true"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/horaInicio_layout"
                style="@style/ChronoMasterTheme.OutlinedTextInputLayout"
                android:hint="@string/hora"
                app:startIconDrawable="@drawable/ic_time"
                app:helperText="@string/horaInicioDescripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtHora"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none|time"
                    android:clickable="true"
                    android:focusable="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/descripcion_layout"
                style="@style/ChronoMasterTheme.OutlinedTextInputLayout"
                android:hint="@string/descripcion"
                app:startIconDrawable="@drawable/ic_desc"
                app:helperText="@string/descripcionDescripcion">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDescripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ChronoMasterTheme.DropDown"
                android:hint="@string/tareaPrevia"
                app:helperText="@string/tareapreviaDescripcion">

                <AutoCompleteTextView
                    android:id="@+id/txtTareaPrevia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ChronoMasterTheme.DropDown"
                android:hint="@string/frecuencia"
                app:helperText="@string/frecuenciaDescripcion">

                <AutoCompleteTextView
                    android:id="@+id/txtFrecuencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/prioridad_layout"
                style="@style/ChronoMasterTheme.DropDown"
                android:hint="@string/prioridad"
                app:startIconDrawable="@drawable/ic_add"
                app:helperText="@string/prioridadDescripcion">

                <AutoCompleteTextView
                    android:id="@+id/txtPrioridad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <RadioGroup
            android:id="@+id/estado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prioridadnDescripcion">

            <RadioButton
                android:id="@+id/rb_pendiente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/estadoP" />

            <RadioButton
                android:id="@+id/rb_finalizado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/estadoF" />
        </RadioGroup>

        <TextView
            android:id="@+id/estadoDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/estadoDescripcion"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/estado"
            app:layout_constraintTop_toBottomOf="@+id/estado" />

        <Button
            android:id="@+id/btnSave"
            style="@style/ChronoMasterTheme.Button"
            android:text="@string/btnSave"
            app:cornerRadius="20dp" />

        <Button
            android:id="@+id/btnCancel"
            style="@style/ChronoMasterTheme.Button"
            android:text="@string/btnCancel"
            app:cornerRadius="20dp"
            android:layout_marginBottom="100dp"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>