<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtviewTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/titulo"
            android:textSize="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtviewPrioridad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/prioridad"
            android:textSize="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtviewTareaPrevia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/tareaPrevia"
            android:textSize="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtviewEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/estado"
            android:textSize="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtviewFrecuencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/frecuencia"
            android:textSize="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtviewDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/descripcion"
            android:textSize="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtviewHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/hora"
            android:textSize="20dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtviewFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/fecha"
            android:textSize="20dp" />
    </LinearLayout>
</ScrollView>