<?xml version="1.0" encoding="utf-8"?>
<!-- Activity de Login/Register -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_bg"
    tools:context=".LoginActivity"
    android:id="@+id/login_frmnt">

    <ImageView
        android:id="@+id/appLogo"
        android:transitionName="logo"
        android:layout_width="175dp"
        android:layout_height="173dp"
        android:contentDescription="@string/contentDes"
        app:srcCompat="@drawable/chronomaster01"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/til_email"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        android:transitionName="email"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/emailPlaceholder"
        app:helperText="@string/emailRequired"
        app:startIconDrawable="@drawable/ic_email"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/appLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:transitionName="txt_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        android:transitionName="pass"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/passPlaceholder"
        app:helperText="@string/passHelp"
        app:startIconDrawable="@drawable/ic_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/til_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnsNative">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_text_pass"
            android:transitionName="txt_pass"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/btnsNative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        app:layout_constraintBottom_toTopOf="@id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogIn"
            style="@style/ChronoMasterTheme.Button"
            android:text="@string/btnLogIn"
            android:textColor="@color/textDisabled"
            android:enabled="false"
            android:layout_marginEnd="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:transitionName="reg"
            style="@style/ChronoMasterTheme.Button"
            android:text="@string/btnSignUp"
            android:layout_marginStart="4dp"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/btnGoogle"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        android:transitionName="google"
        android:text="@string/btnGoogle"
        android:textAlignment="textStart"
        android:backgroundTint="@color/btnGoogle"
        android:drawableStart="@drawable/ic_google_svgrepo_com"
        android:drawablePadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/btnsNative"
        app:layout_constraintEnd_toEndOf="@id/btnsNative"
        app:layout_constraintTop_toBottomOf="@id/btnsNative"
        android:layout_marginBottom="16dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>