<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConfiguracionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/changePassword"
            android:layout_marginStart="24dp"/>




        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/oldPass"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/oldPass"
            app:helperText="@string/longPass"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            app:counterEnabled="true"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editOld"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newPass"
            android:paddingHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/newPass"
            app:helperText="@string/longPass"
            app:startIconDrawable="@drawable/ic_password"
            app:endIconMode="password_toggle"
            app:counterEnabled="true"
            app:errorEnabled="true"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editNewPass"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>




        <com.google.android.material.button.MaterialButton
            android:layout_marginTop="16dp"
            android:id="@+id/btnsaveSettings"
            style="@style/ChronoMasterTheme.Button"
            android:text="@string/save"
            android:layout_gravity="center"/>


    </LinearLayout>


</FrameLayout>